#150 Fix Line height and spacing between paragraph and block quote

--- a/article/static/article/css/blocks.less
+++ b/article/static/article/css/blocks.less
@@ -88,15 +88,16 @@
           padding-right: 0px;
           margin-right: 0px;
           margin-top: 5%;
+          width: 89%;
           .paragraph-holder {
-            width: 96%;
+            width: 95%;
             color: #FF3D08 !important;
             line-height: 1.7em;
             padding: 12px 20px 12px 20px;
             font-size: 2.0em;
             margin-top: 0px;
             margin-bottom: 0px;
-            margin-left: 5px;
+            margin-left: 17px;
           }
           .paragraph-holder:lang(ur) {
             width: 100%;
@@ -109,7 +110,7 @@
     }
     .quote-align-left.block-quote {
       .rich-text {
-        margin-left: 18%;
+        margin-left: 10%;
       }
     }
 
